--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-2" style="margin-right: -15px">
-                <div style="background-color: yellow; height: 800px;"></div>
+                <div style="background-color: darkgreen; height: 800px;"></div>
             </div>
             <div class="col-lg-10" style="margin-left: -15px">
-                <div style="background-color: green; height: 800px;">
+                <div style="background-color: forestgreen; height: 800px;">
                     <div class="row">
                         <div class="col-lg-3" style="padding-right: 0; margin-top: 40px;">
                             <div style="background-color: greenyellow; height: 200px;"></div>
