--- a/index.html
+++ b/index.html
@@ -11,29 +11,28 @@
 <body>
     <div class="container">
         <div class="row">
-            <div class="col-lg-2" style="margin-right: -15px">
+            <div class="col-lg-4">
                 <div style="background-color: darkgreen; height: 800px;"></div>
             </div>
-            <div class="col-lg-10" style="margin-left: -15px">
+            <div class="col-lg-8">
                 <div style="background-color: forestgreen; height: 800px;">
                     <div class="row">
-                        <div class="col-lg-3" style="padding-right: 0; margin-top: 40px;">
-                            <div style="background-color: greenyellow; height: 200px;"></div>
-                        </div>
-                        <div class="col-lg-3" style="padding-left: 0; padding-right: 0; margin-top: 40px;">
+                        <div class="col-lg-3">
                             <div style="background-color: yellowgreen; height: 200px;"></div>
                         </div>
-                        <div class="col-lg-3" style="padding-left: 0; padding-right: 0; margin-top: 40px;">
-                            <div style="background-color: greenyellow; height: 200px;"></div>
+                        <div class="col-lg-3">
+                            <div style="background-color: yellowgreen; height: 200px;"></div>
                         </div>
-                        <div class="col-lg-3" style="padding-left: 0;">
-                            <div style="background-color: yellowgreen; height: 200px; margin-top: 40px;"></div>
+                        <div class="col-lg-3">
+                            <div style="background-color: yellowgreen; height: 200px;"></div>
+                        </div>
+                        <div class="col-lg-3">
+                            <div style="background-color: yellowgreen; height: 200px;"></div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-
     </div>
 
 <script src="https://code.jquery.com/jquery-3.7.0.js" integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM=" crossorigin="anonymous"></script>
