--- a/index.html
+++ b/index.html
@@ -14,16 +14,55 @@
             <div class="col-lg-12">
                 <div class="row">
                     <div class="col-lg-3 col-md-6 col-12">
-                        <div style="background-color: yellowgreen; height: 200px;"></div>
+                        <div style="background-color: yellowgreen; height: 100px; margin-bottom: 30px;"></div>
                     </div>
                     <div class="col-lg-3 col-md-6 col-12">
-                        <div style="background-color: yellowgreen; height: 200px;"></div>
+                        <div style="background-color: yellowgreen; height: 100px; margin-bottom: 30px;"></div>
                     </div>
                     <div class="col-lg-3 col-md-6 col-12">
-                        <div style="background-color: yellowgreen; height: 200px;"></div>
+                        <div style="background-color: yellowgreen; height: 100px; margin-bottom: 30px;"></div>
                     </div>
                     <div class="col-lg-3 col-md-6 col-12">
-                        <div style="background-color: yellowgreen; height: 200px;"></div>
+                        <div style="background-color: yellowgreen; height: 100px; margin-bottom: 30px;"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="row">
+                    <div class="col-lg-8 col-md-12 col-12">
+                        <div style="background-color: yellowgreen; height: 100px; margin-bottom: 30px;"></div>
+                    </div>
+                    <div class="col-lg-4 col-md-12 col-12">
+                        <div style="background-color: yellowgreen; height: 100px; margin-bottom: 30px;"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="row">
+                    <div class="col-lg-8 col-md-12 col-12">
+                        <div style="background-color: yellowgreen; height: 100px; margin-bottom: 30px;"></div>
+                    </div>
+                    <div class="col-lg-4 col-md-12 col-12">
+                        <div style="background-color: yellowgreen; height: 100px; margin-bottom: 30px;"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="row">
+                    <div class="col-lg-4 col-md-12 col-12">
+                        <div style="background-color: yellowgreen; height: 100px; margin-bottom: 30px;"></div>
+                    </div>
+                    <div class="col-lg-4 col-md-12 col-12">
+                        <div style="background-color: yellowgreen; height: 100px; margin-bottom: 30px;"></div>
+                    </div>
+                    <div class="col-lg-4 col-md-12 col-12">
+                        <div style="background-color: yellowgreen; height: 100px; margin-bottom: 30px;"></div>
                     </div>
                 </div>
             </div>
