--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
             <div class="col-lg-12">
                 <div class="row">
                     <div class="col-lg-8 col-md-12 col-12">
-                        <div style="background-color: yellowgreen; height: 100px; margin-bottom: 30px;"></div>
+                        <div style="background-color: forestgreen; height: 100px; margin-bottom: 30px;"></div>
                     </div>
                     <div class="col-lg-4 col-md-12 col-12">
-                        <div style="background-color: yellowgreen; height: 100px; margin-bottom: 30px;"></div>
+                        <div style="background-color: forestgreen; height: 100px; margin-bottom: 30px;"></div>
                     </div>
                 </div>
             </div>
@@ -56,13 +56,13 @@
             <div class="col-lg-12">
                 <div class="row">
                     <div class="col-lg-4 col-md-12 col-12">
-                        <div style="background-color: yellowgreen; height: 100px; margin-bottom: 30px;"></div>
+                        <div style="background-color: forestgreen; height: 100px; margin-bottom: 30px;"></div>
                     </div>
                     <div class="col-lg-4 col-md-12 col-12">
-                        <div style="background-color: yellowgreen; height: 100px; margin-bottom: 30px;"></div>
+                        <div style="background-color: forestgreen; height: 100px; margin-bottom: 30px;"></div>
                     </div>
                     <div class="col-lg-4 col-md-12 col-12">
-                        <div style="background-color: yellowgreen; height: 100px; margin-bottom: 30px;"></div>
+                        <div style="background-color: forestgreen; height: 100px; margin-bottom: 30px;"></div>
                     </div>
                 </div>
             </div>
